<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".events.EventViewFragment"
             android:id="@+id/container_fragment_event">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_fragment_event"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_title"
            android:text="Title "
            style="@style/TV_Style_Title"/>

        <LinearLayout
            style="@style/LL_Horizontal">
            <TextView
                android:id="@+id/tv_speaker_t"
                android:text="Speaker: "
                style="@style/TV_Style_Title_Left"/>
            <TextView
                android:id="@+id/tv_speaker"
                style="@style/TV_Style_Content"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LL_Horizontal">
            <TextView
                android:id="@+id/tv_start_t"
                android:text="Event Start: "
                style="@style/TV_Style_Title_Left"/>
            <TextView
                android:id="@+id/tv_start"
                style="@style/TV_Style_Content"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LL_Horizontal">
            <TextView
                android:id="@+id/tv_end_t"
                android:text="Event End: "
                style="@style/TV_Style_Title_Left"/>
            <TextView
                android:id="@+id/tv_end"
                style="@style/TV_Style_Content"/>
        </LinearLayout>
        <LinearLayout
            style="@style/LL_Horizontal">
            <TextView
                android:id="@+id/tv_location_t"
                android:text="Location: "
                style="@style/TV_Style_Title_Left"/>
            <TextView
                android:id="@+id/tv_location"
                style="@style/TV_Style_Content"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LL_Horizontal">
            <TextView
                android:id="@+id/tv_name_t"
                android:text="Created By: "
                style="@style/TV_Style_Title_Left"/>
            <TextView
                android:id="@+id/tv_name"
                style="@style/TV_Style_Content"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LL_Horizontal">
            <TextView
                android:id="@+id/tv_content_t"
                android:text="Content: "
                style="@style/TV_Style_Title_Left"/>
            <TextView
                android:id="@+id/tv_content"
                style="@style/TV_Style_Content"/>
        </LinearLayout>


    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_claims"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/layout_fragment_event"
            android:layout_above="@+id/layout_event_buttons">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Claims"
                android:id="@+id/textView4"/>
            <TextView
                style="@style/LL_Divider"
                />
            <FrameLayout
                android:id="@+id/claim_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
        android:id="@+id/layout_event_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/edit_button"
                android:text="Edit Event"
                style="@style/Button"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/claim_button"
                android:onClick="onClick"
                android:text="Claim Event"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/delete_button"
                android:onClick="onClick"
                android:text="Cancel Event"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    </RelativeLayout>

</FrameLayout>
